fix dark mode LOOC
fixing the darkies' colors too because why not

--- a/goon/browserassets/css/browserOutput_dark.css
+++ b/goon/browserassets/css/browserOutput_dark.css
@@ -23,6 +23,7 @@ a:visited {color: #b76ff5;}
 .motd a, .motd a:link, .motd a:visited, .motd a:active, .motd a:hover {color: #98971a;}
 
 .ooc {color: #cca300;}
+.looc {color: #FFC700;}
 .maroon {color: #c52943;}
 
 .deadsay {color: #e2c1ff;}
